@@ -96,6 +96,20 @@ name|lucene
 operator|.
 name|index
 operator|.
+name|AtomicReader
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|index
+operator|.
 name|RandomIndexWriter
 import|;
 end_import
@@ -359,7 +373,7 @@ parameter_list|)
 throws|throws
 name|Exception
 block|{
-name|SlowCompositeReaderWrapper
+name|AtomicReader
 name|compositeReaderWrapper
 init|=
 literal|null
@@ -373,8 +387,9 @@ argument_list|)
 expr_stmt|;
 name|compositeReaderWrapper
 operator|=
-operator|new
 name|SlowCompositeReaderWrapper
+operator|.
+name|wrap
 argument_list|(
 name|indexWriter
 operator|.
