@@ -237,9 +237,8 @@ name|reader
 return|;
 block|}
 block|}
-comment|/** Sole constructor, wrapping the provided {@link    *  CompositeReader}. */
 DECL|method|SlowCompositeReaderWrapper
-specifier|public
+specifier|private
 name|SlowCompositeReaderWrapper
 parameter_list|(
 name|CompositeReader
