@@ -1385,11 +1385,12 @@ operator|.
 name|getReader
 argument_list|()
 decl_stmt|;
-name|SlowCompositeReaderWrapper
+name|AtomicReader
 name|slow
 init|=
-operator|new
 name|SlowCompositeReaderWrapper
+operator|.
+name|wrap
 argument_list|(
 name|r
 argument_list|)
