@@ -2892,11 +2892,12 @@ operator|.
 name|getReader
 argument_list|()
 decl_stmt|;
-name|SlowCompositeReaderWrapper
+name|AtomicReader
 name|slow
 init|=
-operator|new
 name|SlowCompositeReaderWrapper
+operator|.
+name|wrap
 argument_list|(
 name|ir
 argument_list|)
