@@ -2760,8 +2760,9 @@ name|DEFAULT
 operator|.
 name|getInts
 argument_list|(
-operator|new
 name|SlowCompositeReaderWrapper
+operator|.
+name|wrap
 argument_list|(
 name|r
 argument_list|)
