@@ -326,23 +326,12 @@ specifier|final
 name|AtomicReader
 name|r
 init|=
-name|topReader
-operator|instanceof
-name|CompositeReader
-condition|?
-operator|new
 name|SlowCompositeReaderWrapper
+operator|.
+name|wrap
 argument_list|(
-operator|(
-name|CompositeReader
-operator|)
 name|topReader
 argument_list|)
-else|:
-operator|(
-name|AtomicReader
-operator|)
-name|topReader
 decl_stmt|;
 specifier|final
 name|SortedDocValues
