@@ -124,6 +124,20 @@ name|lucene
 operator|.
 name|index
 operator|.
+name|AtomicReader
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|index
+operator|.
 name|DirectoryReader
 import|;
 end_import
@@ -2848,11 +2862,12 @@ operator|.
 name|getReader
 argument_list|()
 decl_stmt|;
-name|SlowCompositeReaderWrapper
+name|AtomicReader
 name|wrapper
 init|=
-operator|new
 name|SlowCompositeReaderWrapper
+operator|.
+name|wrap
 argument_list|(
 name|reader
 argument_list|)
