@@ -722,8 +722,9 @@ block|}
 name|IndexReader
 name|reader
 init|=
-operator|new
 name|SlowCompositeReaderWrapper
+operator|.
+name|wrap
 argument_list|(
 name|w
 operator|.
